Remove code related to Version 7 for fedeora based OSs

--- a/tasks/system.yml
+++ b/tasks/system.yml
@@ -18,7 +18,7 @@
     state: permissive
   when: selinux_available.stat.exists == true
 
-- name: 'Install required packages (Version 7 and 8)'
+- name: 'Install required packages (Version 8)'
   yum:
     name:
       - java-17-openjdk-devel
@@ -27,8 +27,7 @@
       - mariadb-server
       - chrony
     state: installed
-  when: (((ansible_distribution_major_version == "7") or 
-          (ansible_distribution_major_version == "8")) and 
+  when: ((ansible_distribution_major_version == "8") and 
          (patch_with=="yum"))
 
 - name: 'Install required packages (Version 9)'
@@ -53,14 +52,6 @@
     state: present
     update_cache: yes
   when: patch_with=="apt"
-
-- name: 'Install required packages - OS Version 7'
-  yum:
-    name:
-      - pyOpenSSL
-      - MySQL-python
-    state: installed
-  when: ((ansible_distribution_major_version == "7") and (patch_with=="yum"))
 
 - name: 'Install required packages - OS Version 8'
   yum:
