--- a/tasks/jetty.yml
+++ b/tasks/jetty.yml
@@ -14,6 +14,14 @@
     state: directory
     mode: 0750
 
+- name: 'Create /var/run/jetty'
+  file:
+    dest: /var/run/jetty
+    state: directory
+    owner: jetty
+    group: jetty
+    mode: 0755
+
 - name: 'Download jetty distribution'
   get_url:
     url: '{{ urls.jetty.url }}'
