Config to enable IdP to access files via a web-proxy

--- a/bootstrap-v5.ini
+++ b/bootstrap-v5.ini
@@ -241,3 +241,12 @@ IDP_BEHIND_PROXY=false
 # more details.
 
 DEFAULT_ENCRYPTION=GCM
+
+#
+
+# Web Proxy setting. Only required if your IdP sits behind a web proxy that is uses
+# to retrieve files from the Internet. Files such as federation metadata.
+
+#WEB_PROXYHOST=proxy.example.edu.au
+
+#WEB_PROXYPORT=80
