--- a/tasks/idp.yml
+++ b/tasks/idp.yml
@@ -63,10 +63,10 @@
   args:
     creates: '{{ shib_idp.home }}'
 
-- name: 'Set web_proxy.xml bean file"
+- name: 'Set web_proxy.xml bean file'
   template:
-    src: 'assets/{{inventory_hostname}}/idp/conf/web_proxy.xml"
-    dest: '{{ shib_idp.home }}/conf/web_proxy.xml"
+    src: 'templates/idp/web_proxy.xml'
+    dest: '{{ shib_idp.home }}/web_proxy.xml'
     owner: root
     group: jetty
     mode: 0640
@@ -108,10 +108,10 @@
   when: ((web_proxyhost == "") and
          (web_proxyport == ""))
 
-- name: 'Install plugin - nashorn' using web-proxy
+- name: 'Install plugin - nashorn using web-proxy'
   shell: |
     umask 0022
-    {{ shib_idp.home }}/bin/plugin.sh -I {{ download.plugins.nashorn.name }} {{ shib_idp.home }}/conf/web_proxy.xml 2> {{ shib_idp.home }}/plugins/{{ download.plugins.nashorn.name }}.{{download.plugins.nashorn.version }}
+    {{ shib_idp.home }}/bin/plugin.sh -I {{ download.plugins.nashorn.name }} -hc customHttpClient {{ shib_idp.home }}/web_proxy.xml 2> {{ shib_idp.home }}/plugins/{{ download.plugins.nashorn.name }}.{{download.plugins.nashorn.version }}
   args:
     creates: '{{ shib_idp.home }}/plugins/{{ download.plugins.nashorn.name }}.{{download.plugins.nashorn.version }}'
   when: ((web_proxyhost != "") and
@@ -126,10 +126,10 @@
   when: ((web_proxyhost == "") and
          (web_proxyport == ""))
 
-- name: 'Install plugin - storage.jdbc' using web-proxy
+- name: 'Install plugin - storage.jdbc using web-proxy'
   shell: |
     umask 0022
-    {{ shib_idp.home }}/bin/plugin.sh -I {{ download.plugins.storage_jdbc.name }} {{ shib_idp.home }}/conf/web_proxy.xml 2> {{ shib_idp.home }}/plugins/{{ download.plugins.storage_jdbc.name }}.{{download.plugins.storage_jdbc.version }}
+    {{ shib_idp.home }}/bin/plugin.sh -I {{ download.plugins.storage_jdbc.name }} -hc customHttpClient {{ shib_idp.home }}/web_proxy.xml 2> {{ shib_idp.home }}/plugins/{{ download.plugins.storage_jdbc.name }}.{{download.plugins.storage_jdbc.version }}
   args:
     creates: '{{ shib_idp.home }}/plugins/{{ download.plugins.storage_jdbc.name }}.{{download.plugins.storage_jdbc.version }}'
   when: ((web_proxyhost != "") and
