--- a/tasks/libs.yml
+++ b/tasks/libs.yml
@@ -22,21 +22,6 @@
     src: '{{ shib_idp.libs }}/jetty94-dta-ssl-{{ download.dta_ssl.version }}.jar'
     state: link
 
-- name: 'Install logback-access'
-  get_url:
-    url: '{{ urls.logback_access.url }}'
-    dest: '{{ shib_idp.libs }}/logback-access-{{ download.logback_access.version }}.jar'
-    checksum: 'sha256:{{ download.logback_access.sha256sum }}'
-    owner: root
-    group: jetty
-    mode: 0640
-
-- name: 'Link to logback-access library'
-  file:
-    name: '{{ jetty.base }}/lib/logback/logback-access.jar'
-    src: '{{ shib_idp.libs }}/logback-access-{{ download.logback_access.version }}.jar'
-    state: link
-
 - name: 'Install logback-classic'
   get_url:
     url: '{{ urls.logback_classic.url }}'
@@ -48,7 +33,7 @@
 
 - name: 'Link to logback-classic library'
   file:
-    name: '{{ jetty.base }}/lib/logback/logback-classic.jar'
+    name: '{{ jetty.base }}/lib/logging/logback-classic-{{ download.logback_classic.version }}.jar'
     src: '{{ shib_idp.libs }}/logback-classic-{{ download.logback_classic.version }}.jar'
     state: link
 
@@ -63,7 +48,7 @@
 
 - name: 'Link to logback-core library'
   file:
-    name: '{{ jetty.base }}/lib/logback/logback-core.jar'
+    name: '{{ jetty.base }}/lib/logging/logback-core-{{ download.logback_core.version }}.jar'
     src: '{{ shib_idp.libs }}/logback-core-{{ download.logback_core.version }}.jar'
     state: link
 
@@ -78,39 +63,27 @@
 
 - name: 'Link to jcl-over-slf4j library'
   file:
-    name: '{{ jetty.base }}/lib/logback/jcl-over-slf4j.jar'
+    name: '{{ jetty.base }}/lib/logging/jcl-over-slf4j-{{ download.jcl_over_slf4j.version }}.jar'
     src: '{{ shib_idp.libs }}/jcl-over-slf4j-{{ download.jcl_over_slf4j.version }}.jar'
     state: link
 
-- name: 'Install slf4j-api'
-  get_url:
-    url: '{{ urls.slf4j_api.url }}'
-    dest: '{{ shib_idp.libs }}/slf4j-api-{{ download.slf4j_api.version }}.jar'
-    checksum: 'sha256:{{ download.slf4j_api.sha256sum }}'
-    owner: root
-    group: jetty
-    mode: 0640
-
-- name: 'Link to slf4j-api library'
-  file:
-    name: '{{ jetty.base }}/lib/logback/slf4j-api.jar'
-    src: '{{ shib_idp.libs }}/slf4j-api-{{ download.slf4j_api.version }}.jar'
-    state: link
-
-- name: 'Install aaf-shib-ext library'
+- name: 'Install aaf-shibext library'
   get_url:
     url: '{{ urls.aaf_shib_ext.url }}'
-    dest: '{{ shib_idp.libs }}/aaf-shib-ext-{{ download.aaf_shib_ext.version }}.jar'
+    dest: '{{ shib_idp.home }}/edit-webapp/WEB-INF/lib/aaf-shibext-{{ download.aaf_shib_ext.version }}.jar'
     checksum: 'sha256:{{ download.aaf_shib_ext.sha256sum }}'
     mode: 0640
     owner: root
     group: jetty
 
-- name: 'Link to aaf-shib-ext library'
-  file:
-    name: '{{ shib_idp.home }}/edit-webapp/WEB-INF/lib/aaf-shib-ext.jar'
-    src: '{{ shib_idp.libs }}/aaf-shib-ext-{{ download.aaf_shib_ext.version }}.jar'
-    state: link
+- name: 'Install spring-jdbc library'
+  get_url:
+    url: '{{ urls.spring_jdbc.url }}'
+    dest: '{{ shib_idp.home }}/edit-webapp/WEB-INF/lib/spring-jdbc-{{ download.spring_jdbc.version }}.jar'
+    checksum: 'sha256:{{ download.spring_jdbc.sha256sum }}'
+    mode: 0640
+    owner: root
+    group: jetty
 
 - name: 'Install mysql connector library'
   get_url:
