Fixed incorrect referece to uid from samlSubjectID

--- a/assets/idp.example.edu.dist/idp/conf/saml-nameid.properties
+++ b/assets/idp.example.edu.dist/idp/conf/saml-nameid.properties
@@ -20,7 +20,7 @@ idp.persistentId.sourceAttribute = {{ old_source_persistent_id }}
 {% if source_persistent_id != "" %}
 idp.newPersistentId.sourceAttribute = {{ source_persistent_id }}
 {% else %}
-#idp.persistentId.sourceAttribute =
+#idp.newPersistentId.sourceAttribute =
 {% endif %}
 #idp.persistentId.useUnfilteredAttributes = true
 #idp.persistentId.algorithm = SHA
