--- a/tasks/idp.yml
+++ b/tasks/idp.yml
@@ -98,7 +98,7 @@
 
 - name: 'Keys for plugings - nashorn'
   get_url:
-    url: '{{ urls.plugins.nashorn.url }}'
+    url: '{{ urls.plugins.nashorn.truststore_url }}'
     dest: '{{ shib_idp.home }}/credentials/{{ download.plugins.nashorn.name }}/truststore.asc'
     owner: root
     group: jetty
@@ -106,7 +106,7 @@
 
 - name: 'Keys for plugings - storage.jdbc'
   get_url:
-    url: '{{ urls.plugins.storage_jdbc.url }}'
+    url: '{{ urls.plugins.storage_jdbc.truststore_url }}'
     dest: '{{ shib_idp.home }}/credentials/{{ download.plugins.storage_jdbc.name }}/truststore.asc'
     owner: root
     group: jetty
@@ -124,7 +124,7 @@
 - name: 'Install plugin - nashorn using web-proxy'
   shell: |
     umask 0022
-    {{ shib_idp.home }}/bin/plugin.sh -I {{ download.plugins.nashorn.name }} -hc customHttpClient {{ shib_idp.home_root }}/web_proxy.xml 2> {{ shib_idp.home }}/plugins/{{ download.plugins.nashorn.name }}.{{download.plugins.nashorn.version }}
+    {{ shib_idp.home }}/bin/plugin.sh -i {{ urls.plugins.nashhorn.plugin_url }} -hc customHttpClient {{ shib_idp.home_root }}/web_proxy.xml 2> {{ shib_idp.home }}/plugins/{{ download.plugins.nashorn.name }}.{{download.plugins.nashorn.version }}
   args:
     creates: '{{ shib_idp.home }}/plugins/{{ download.plugins.nashorn.name }}.{{download.plugins.nashorn.version }}'
   when: not ((web_proxyhost is undefined) or (web_proxyhost is none) or (web_proxyhost == "") or
@@ -133,7 +133,7 @@
 - name: 'Install plugin - storage.jdbc'
   shell: |
     umask 0022
-    {{ shib_idp.home }}/bin/plugin.sh -I {{ download.plugins.storage_jdbc.name }} 2> {{ shib_idp.home }}/plugins/{{ download.plugins.storage_jdbc.name }}.{{download.plugins.storage_jdbc.version }}
+    {{ shib_idp.home }}/bin/plugin.sh -I {{ urls.plugins.storage_jdbc.plugin_url }} 2> {{ shib_idp.home }}/plugins/{{ download.plugins.storage_jdbc.name }}.{{download.plugins.storage_jdbc.version }}
   args:
     creates: '{{ shib_idp.home }}/plugins/{{ download.plugins.storage_jdbc.name }}.{{download.plugins.storage_jdbc.version }}'
   when: ((web_proxyhost is undefined) or (web_proxyhost is none) or (web_proxyhost == "") or
