--- a/tasks/idp.yml
+++ b/tasks/idp.yml
@@ -115,7 +115,7 @@
 - name: 'Install plugin - nashorn'
   shell: |
     umask 0022
-    {{ shib_idp.home }}/bin/plugin.sh -I {{ download.plugins.nashorn.name }} 2> {{ shib_idp.home }}/plugins/{{ download.plugins.nashorn.name }}.{{download.plugins.nashorn.version }}
+    {{ shib_idp.home }}/bin/plugin.sh -i {{ urls.plugins.nashhorn.plugin_url }} 2> {{ shib_idp.home }}/plugins/{{ download.plugins.nashorn.name }}.{{download.plugins.nashorn.version }}
   args:
     creates: '{{ shib_idp.home }}/plugins/{{ download.plugins.nashorn.name }}.{{download.plugins.nashorn.version }}'
   when: ((web_proxyhost is undefined) or (web_proxyhost is none) or (web_proxyhost == "") or
@@ -133,7 +133,7 @@
 - name: 'Install plugin - storage.jdbc'
   shell: |
     umask 0022
-    {{ shib_idp.home }}/bin/plugin.sh -I {{ urls.plugins.storage_jdbc.plugin_url }} 2> {{ shib_idp.home }}/plugins/{{ download.plugins.storage_jdbc.name }}.{{download.plugins.storage_jdbc.version }}
+    {{ shib_idp.home }}/bin/plugin.sh -i {{ urls.plugins.storage_jdbc.plugin_url }} 2> {{ shib_idp.home }}/plugins/{{ download.plugins.storage_jdbc.name }}.{{download.plugins.storage_jdbc.version }}
   args:
     creates: '{{ shib_idp.home }}/plugins/{{ download.plugins.storage_jdbc.name }}.{{download.plugins.storage_jdbc.version }}'
   when: ((web_proxyhost is undefined) or (web_proxyhost is none) or (web_proxyhost == "") or
@@ -142,7 +142,7 @@
 - name: 'Install plugin - storage.jdbc using web-proxy'
   shell: |
     umask 0022
-    {{ shib_idp.home }}/bin/plugin.sh -I {{ download.plugins.storage_jdbc.name }} -hc customHttpClient {{ shib_idp.home_root }}/web_proxy.xml 2> {{ shib_idp.home }}/plugins/{{ download.plugins.storage_jdbc.name }}.{{download.plugins.storage_jdbc.version }}
+    {{ shib_idp.home }}/bin/plugin.sh -i {{ download.plugins.storage_jdbc.name }} -hc customHttpClient {{ shib_idp.home_root }}/web_proxy.xml 2> {{ shib_idp.home }}/plugins/{{ download.plugins.storage_jdbc.name }}.{{download.plugins.storage_jdbc.version }}
   args:
     creates: '{{ shib_idp.home }}/plugins/{{ download.plugins.storage_jdbc.name }}.{{download.plugins.storage_jdbc.version }}'
   when: not ((web_proxyhost is undefined) or (web_proxyhost is none) or (web_proxyhost == "") or
