--- a/site_v5.yml
+++ b/site_v5.yml
@@ -105,7 +105,7 @@
           plugin_url: "{{ download.plugins.baseurl }}/{{ download.plugins.nashorn.name }}/-{{ download.plugins.nashorn.version }}.tar.gz"
         storage_jdbc: 
           truststore_url: "{{ download.plugins.baseurl }}/{{ download.plugins.storage_jdbc.name }}/truststore.asc.{{ download.plugins.storage_jdbc.version }}"
-          plugin_url: "{{ download.plugins.baseurl }}/{{ download.plugins.storage_jdbc.name }}/java-plugin-jdbc-storage-{{ download.plugins.storage_jdbc.version }}.tar.gz
+          plugin_url: "{{ download.plugins.baseurl }}/{{ download.plugins.storage_jdbc.name }}/java-plugin-jdbc-storage-{{ download.plugins.storage_jdbc.version }}.tar.gz"
     installer:
       root: "{{ install_base }}/shibboleth-idp5-installer"
       path: "{{ install_base }}/shibboleth-idp5-installer/build"
