Added option to add http-forward if idp-behind-proxy is true

--- a/templates/jetty/start.d/idp-system.ini
+++ b/templates/jetty/start.d/idp-system.ini
@@ -3,13 +3,20 @@
 --module=http
 --module=logging-logback
 --module=idp
+{% if idp_behind_proxy == "true" %}
+--module=http-forwarded
+{% endif %}
 
 ## Deny SSL renegotiation
 jetty.sslContext.renegotiationAllowed=false
 
 jetty.ssl.port=443
 jetty.http.port=80
-jetty.http.host=localhost
+{% if idp_behind_proxy == "true" %}
+jetty.http.host=0.0.0.0
+{% else %}
+jetty.http.host=127.0.0.1
+{% endif %}
 
 logback.version={{ download.logback_core.version }}
 
