--- a/bootstrap-v5.ini
+++ b/bootstrap-v5.ini
@@ -162,6 +162,11 @@ REFEDS_PSEUDONYMOUS_V2="false"
 #
 REFEDS_PERSONALIZED_V2="false"
 
+# This IdP conforms to the REFEDS Code of Conduct v.1
+# Ref: http://www.geant.net/uri/dataprotection-code-of-conduct/v1
+#
+REFEDS_CODE_OF_CONDUCT_V1="false"
+
 # This IdP conforms to the REFEDS Code of Conduct v.2
 # Ref: https://refeds.org/category/code-of-conduct/v2
 #
